Fixed tab overlap and improved alignments

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -55,10 +55,10 @@
     box-shadow: 0px 0px 8px 4px rgb(15, 15, 15);*/
 }
 .content-container {
-    width: 95%;
+    width: 90%;
     max-width: 800px;
-    padding: 15px;
-    margin: 5px;
+    padding: 0;
+    margin: 1rem;
     flex-direction: column;
     justify-content: left;
     align-items: left;
@@ -109,12 +109,11 @@
 }
 
 .my-work {
-    width: 85%;
+    width: 90%;
     height: auto;
     display: grid;
     border: 5px solid black;
     border-radius: 14px;
-    padding: 5px;
     gap: 3px;
 }
 
